dev: start directory node in dev setup
dev: start instance 1 with access local directory node

dev: connect primary and secondary instances to local directory node

dev: ability to specify jm branch in primary container

dev: remove symlink for tor in directory-node as #1271 is fixed upstream

dev: inject hs dir in directory-node instance

dev: add script to create onion addresses for regtest setup

dev: add prepare-setup.sh script to write .env.generated file

dev: cleanup directory-node setup and scripts

--- a/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/default.cfg
+++ b/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/default.cfg
@@ -41,39 +41,36 @@ rpc_password = password
 # information.
 rpc_wallet_file =
 
-# [MESSAGING:onion]
+[MESSAGING:onion]
 # onion based message channels must have the exact type 'onion'
 # (while the section name above can be MESSAGING:whatever), and there must
 # be only ONE such message channel configured (note the directory servers
 # can be multiple, below):
-# type = onion
+type = onion
 
-# socks5_host = localhost
-# socks5_port = 9050
+socks5_host = localhost
+socks5_port = 9050
 
 # the tor control configuration.
 # for most people running the tor daemon
 # on Linux, no changes are required here:
-# tor_control_host = localhost
+tor_control_host = localhost
 # or, to use a UNIX socket
 # tor_control_host = unix:/var/run/tor/control
 # note: port needs to be provided (but is ignored for UNIX socket)
-# tor_control_port = 9051
+tor_control_port = 9051
 
 # the host/port actually serving the hidden service
 # (note the *virtual port*, that the client uses,
 # is hardcoded to as per below 'directory node configuration'.
-# onion_serving_host = 127.0.0.1
-# onion_serving_port = 8080
+onion_serving_host = 127.0.0.1
+onion_serving_port = 8080
 
 # directory node configuration
+# (taken from joinmarket-clientserver/test/regtest_joinmarket.cfg)
 #
-# This is mandatory for directory nodes (who must also set their
-# own *.onion:port as the only directory in directory_nodes, below),
-# but NOT TO BE USED by non-directory nodes (which is you, unless
-# you know otherwise!), as it will greatly degrade your privacy.
-# (note the default is no value, don't replace it with "").
-# hidden_service_dir =
+# Special handling on regtest, so just ignore and let the code handle it:
+hidden_service_dir =
 #
 # This is a comma separated list (comma can be omitted if only one item).
 # Each item has format host:port ; both are required, though port will
@@ -84,12 +81,12 @@ rpc_wallet_file =
 # for SIGNET (testing network):
 # directory_nodes = rr6f6qtleiiwic45bby4zwmiwjrj3jsbmcvutwpqxjziaydjydkk5iad.onion:5222,k74oyetjqgcamsyhlym2vgbjtvhcrbxr4iowd4nv4zk5sehw4v665jad.onion:5222,y2ruswmdbsfl4hhwwiqz4m3sx6si5fr6l3pf62d4pms2b53wmagq3eqd.onion:5222
 
-# for REGTEST (taken from joinmarket-clientserver/test/regtest_joinmarket.cfg):
-# directory_nodes = localhost:8081
+# for REGTEST (local dev setup):
+directory_nodes = localhost:8081
 
 # This setting is ONLY for developer regtest setups,
 # running multiple bots at once. Don't alter it otherwise
-# regtest_count = 0,0
+regtest_count = 0,0
 
 [MESSAGING:server1]
 host = irc
