--- a/docker/regtest/docker-compose.yml
+++ b/docker/regtest/docker-compose.yml
@@ -24,6 +24,14 @@ services:
       jm_rpc_port: 43782
       jm_rpc_user: joinmarket
       jm_rpc_password: joinmarket
+      jm_directory_nodes: ${JM_DIRECTORY_NODES:?You must set the onion address generated in prepare step to your .env file}
+      jm_socks5: "false" # will _not_ connect to local irc over tor
+      jm_socks5_host: tor
+      jm_socks5_port: 9050
+      jm_tor_control_host: tor
+      jm_tor_control_port: 9051
+      jm_onion_socks5_host: tor
+      jm_onion_socks5_port: 9050
     expose:
       - 8080  # payjoin server
       - 62601 # obwatch
@@ -39,6 +47,7 @@ services:
       - "nbxplorer_datadir:/root/.nbxplorer"
     depends_on:
       - bitcoind
+      - tor
       - nbxplorer
       - irc
 
@@ -66,7 +75,7 @@ services:
       jm_rpc_port: 43782
       jm_rpc_user: joinmarket2
       jm_rpc_password: joinmarket2
-      # showcase exemplary tor environment vars
+      jm_directory_nodes: ${JM_DIRECTORY_NODES:?You must set the onion address generated in prepare step to your .env file}
       jm_socks5: "false" # will _not_ connect to local irc over tor
       jm_socks5_host: tor
       jm_socks5_port: 9050
@@ -91,9 +100,24 @@ services:
       - "tor_datadir:/home/tor/.tor"
     depends_on:
       - bitcoind
-      - irc
       - nbxplorer
       - tor
+      - irc
+
+  joinmarket_directory_node:
+    container_name: jm_regtest_joinmarket_directory_node
+    build:
+      context: ./dockerfile-deps/joinmarket/directory_node
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    environment:
+      jm_hidden_service_dir: \/root\/.joinmarket\/hidden_service_dir
+      jm_directory_nodes: ${JM_DIRECTORY_NODES:?You must set the onion address generated in prepare step to your .env file}
+      jm_blockchain_source: regtest
+      jm_network: testnet
+    volumes:
+      - "joinmarket_directory_node_datadir:/root/.joinmarket"
+      - "./out/hidden_service_dir:/root/.joinmarket/hidden_service_dir:z"
 
   irc:
     container_name: jm_regtest_irc
@@ -217,6 +241,7 @@ volumes:
   nbxplorer_datadir:
   joinmarket_datadir:
   joinmarket2_datadir:
+  joinmarket_directory_node_datadir:
   irc_datadir:
   tor_datadir:
   tor_torrcdir:
