--- a/docker/regtest/dockerfile-deps/joinmarket/directory_node/default.cfg
+++ b/docker/regtest/dockerfile-deps/joinmarket/directory_node/default.cfg
@@ -70,7 +70,7 @@ onion_serving_port = 8080
 # (taken from joinmarket-clientserver/test/regtest_joinmarket.cfg)
 #
 # Special handling on regtest, so just ignore and let the code handle it:
-hidden_service_dir =
+hidden_service_dir = 
 #
 # This is a comma separated list (comma can be omitted if only one item).
 # Each item has format host:port ; both are required, though port will
@@ -82,21 +82,11 @@ hidden_service_dir =
 # directory_nodes = rr6f6qtleiiwic45bby4zwmiwjrj3jsbmcvutwpqxjziaydjydkk5iad.onion:5222,k74oyetjqgcamsyhlym2vgbjtvhcrbxr4iowd4nv4zk5sehw4v665jad.onion:5222,y2ruswmdbsfl4hhwwiqz4m3sx6si5fr6l3pf62d4pms2b53wmagq3eqd.onion:5222
 
 # for REGTEST (local dev setup):
-directory_nodes = localhost:8081
+directory_nodes = replaceme
 
 # This setting is ONLY for developer regtest setups,
 # running multiple bots at once. Don't alter it otherwise
 regtest_count = 0,0
-
-[MESSAGING:server1]
-host = irc
-hostid = localhost1
-channel = joinmarket-pit
-port = 6667
-usessl = false
-socks5 = false
-socks5_host = localhost
-socks5_port = 9050
 
 [LOGGING]
 # Set the log level for the output to the terminal/console
