dev: directory node setup for regtest (#259)
* dev: update regtest config for JM v0.9.6 in dev setup

* dev: use jam's 'default' cj_max fee settings in dev setup

* dev: update secondary dev container config

* dev: start directory node in dev setup

dev: start instance 1 with access local directory node

dev: connect primary and secondary instances to local directory node

dev: ability to specify jm branch in primary container

dev: remove symlink for tor in directory-node as #1271 is fixed upstream

dev: inject hs dir in directory-node instance

dev: add script to create onion addresses for regtest setup

dev: add prepare-setup.sh script to write .env.generated file

dev: cleanup directory-node setup and scripts

* cleanup: clarify hs directory handling

* cleanup: fix typos and remove unneeded commands in prepare setup script

* dev: revert changes to regtest fee settings

* dev: use example env file for all other commands than 'up'

* dev: fix directory node setup on restarts

* dev: adapt permissions of hs directory in regtest directory node

* dev: ability to follow logs of directory node via npm script

* fix: directory node scripts compatibility

* Update docker/regtest/dockerfile-deps/joinmarket/directory_node/README.md

Co-authored-by: Daniel <10026790+dnlggr@users.noreply.github.com>

* Update docker/regtest/.gitignore

Co-authored-by: Daniel <10026790+dnlggr@users.noreply.github.com>

* Update docker/regtest/dockerfile-deps/joinmarket/directory_node/README.md

Co-authored-by: Daniel <10026790+dnlggr@users.noreply.github.com>

* review: fix newlines and typos

Co-authored-by: Daniel <10026790+dnlggr@users.noreply.github.com>

--- a/docker/regtest/dockerfile-deps/joinmarket/directory_node/default.cfg
+++ b/docker/regtest/dockerfile-deps/joinmarket/directory_node/default.cfg
@@ -70,7 +70,7 @@ onion_serving_port = 8080
 # (taken from joinmarket-clientserver/test/regtest_joinmarket.cfg)
 #
 # Special handling on regtest, so just ignore and let the code handle it:
-hidden_service_dir =
+hidden_service_dir = 
 #
 # This is a comma separated list (comma can be omitted if only one item).
 # Each item has format host:port ; both are required, though port will
@@ -82,21 +82,11 @@ hidden_service_dir =
 # directory_nodes = rr6f6qtleiiwic45bby4zwmiwjrj3jsbmcvutwpqxjziaydjydkk5iad.onion:5222,k74oyetjqgcamsyhlym2vgbjtvhcrbxr4iowd4nv4zk5sehw4v665jad.onion:5222,y2ruswmdbsfl4hhwwiqz4m3sx6si5fr6l3pf62d4pms2b53wmagq3eqd.onion:5222
 
 # for REGTEST (local dev setup):
-directory_nodes = localhost:8081
+directory_nodes = replaceme
 
 # This setting is ONLY for developer regtest setups,
 # running multiple bots at once. Don't alter it otherwise
 regtest_count = 0,0
-
-[MESSAGING:server1]
-host = irc
-hostid = localhost1
-channel = joinmarket-pit
-port = 6667
-usessl = false
-socks5 = false
-socks5_host = localhost
-socks5_port = 9050
 
 [LOGGING]
 # Set the log level for the output to the terminal/console
@@ -176,17 +166,13 @@ max_sweep_fee_change = 0.8
 # market maker for a transaction. Both the limits given in
 # max_cj_fee_abs and max_cj_fee_rel must be exceeded in order
 # to not consider a certain offer.
-
-# taken from jam production image
-max_cj_fee_abs = 300000
+max_cj_fee_abs = 300000 # 0.003 btc
 
 # Maximum relative coinjoin fee, in fractions of the coinjoin value
 # e.g. if your coinjoin amount is 2 btc (200 million satoshi) and
 # max_cj_fee_rel = 0.001 (0.1%), the maximum fee allowed would
-# be 0.002 btc (200000 satoshi)
-
-# taken from jam production image
-max_cj_fee_rel = 0.0003
+# be 0.002 btc (200 thousand satoshi)
+max_cj_fee_rel = 0.0003 # 0.03%
 
 # The range of confirmations passed to the `listunspent` bitcoind RPC call
 # 1st value is the inclusive minimum, defaults to one confirmation
