--- a/docker/regtest/dockerfile-deps/joinmarket/directory_node/Dockerfile
+++ b/docker/regtest/dockerfile-deps/joinmarket/directory_node/Dockerfile
@@ -3,6 +3,7 @@ FROM python:3.9.7-slim-bullseye
 RUN apt-get update \
     && apt-get install -qq --no-install-recommends tini procps vim git iproute2 supervisor \
        curl build-essential automake pkg-config libtool python3-dev python3-pip python3-setuptools libltdl-dev \
+       libevent-dev libssl-dev zlib1g-dev \
     && rm -rf /var/lib/apt/lists/*
 
 ENV REPO https://github.com/JoinMarket-Org/joinmarket-clientserver
@@ -12,7 +13,7 @@ ENV REPO_REF master
 WORKDIR /src
 RUN git clone "$REPO" . --depth=10 --branch "$REPO_BRANCH" && git checkout "$REPO_REF"
 
-RUN ./install.sh --docker-install --disable-secp-check --without-qt
+RUN ./install.sh --docker-install --with-local-tor --disable-secp-check --without-qt
 
 ENV DATADIR /root/.joinmarket
 ENV CONFIG ${DATADIR}/joinmarket.cfg
@@ -22,6 +23,8 @@ ENV AUTO_START ${DATADIR}/autostart
 ENV PATH /src/scripts:$PATH
 
 COPY default.cfg "${CONFIG}"
+COPY autostart /root/
+COPY supervisor-conf/*.conf /etc/supervisor/conf.d/
 
 RUN cd /src/scripts \
     && (python wallet-tool.py generate || true) \
@@ -29,9 +32,8 @@ RUN cd /src/scripts \
 
 WORKDIR /src/scripts
 
+COPY start-dn.py .
 COPY docker-entrypoint.sh .
-COPY autostart /root/
-COPY supervisor-conf/*.conf /etc/supervisor/conf.d/
 
 # payjoin server
 EXPOSE 8080
