--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^17.0.14",
     "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
+    "classnames": "^2.3.1",
     "conventional-changelog": "^3.1.25",
     "formik": "^2.2.9",
     "http-proxy-middleware": "^2.0.6",
