--- a/docker/regtest/dockerfile-deps/joinmarket/latest/Dockerfile
+++ b/docker/regtest/dockerfile-deps/joinmarket/latest/Dockerfile
@@ -21,17 +21,14 @@ ENV DEFAULT_AUTO_START /root/autostart
 ENV AUTO_START ${DATADIR}/autostart
 ENV PATH /src/scripts:$PATH
 
-COPY default.cfg "${CONFIG}"
-
-RUN cd /src/scripts \
-    && (python wallet-tool.py generate || true) \
-    && cp "${CONFIG}" "${DEFAULT_CONFIG}"
-
 WORKDIR /src/scripts
 
-COPY docker-entrypoint.sh /
-COPY autostart /root/
+COPY autostart ${DEFAULT_AUTO_START}
+COPY default.cfg ${DEFAULT_CONFIG}
 COPY supervisor-conf/*.conf /etc/supervisor/conf.d/
+
+COPY jam-entrypoint.sh /
+RUN chmod +x /jam-entrypoint.sh
 
 # payjoin server
 EXPOSE 8080
@@ -44,4 +41,4 @@ EXPOSE 28183
 # jmwalletd websocket
 EXPOSE 28283
 
-ENTRYPOINT  [ "tini", "-g", "--", "/docker-entrypoint.sh" ]
+ENTRYPOINT  [ "tini", "-g", "--", "/jam-entrypoint.sh" ]
