--- a/docker/regtest/docker-compose.yml
+++ b/docker/regtest/docker-compose.yml
@@ -10,7 +10,8 @@ services:
     restart: unless-stopped
     environment:
       READY_FILE: /root/.nbxplorer/btc_fully_synched
-      ENSURE_WALLET: 1
+      ENSURE_WALLET: "true"
+      REMOVE_LOCK_FILES: "true"
       jm_rpc_wallet_file: jm_primary
       jm_minimum_makers: 1
       jm_tx_broadcast: self
@@ -41,6 +42,7 @@ services:
     volumes:
       - "joinmarket_datadir:/root/.joinmarket"
       - "nbxplorer_datadir:/root/.nbxplorer"
+      - "tor_datadir:/home/tor/.tor"
     depends_on:
       - bitcoind
       - tor
@@ -55,7 +57,8 @@ services:
     restart: unless-stopped
     environment:
       READY_FILE: /root/.nbxplorer/btc_fully_synched
-      ENSURE_WALLET: 1
+      ENSURE_WALLET: "true"
+      REMOVE_LOCK_FILES: "true"
       APP_USER: joinmarket
       APP_PASSWORD: joinmarket
       jm_rpc_wallet_file: jm_secondary
