--- a/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/Dockerfile
+++ b/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/Dockerfile
@@ -1,5 +1,5 @@
-FROM ghcr.io/joinmarket-webui/joinmarket-webui-dev-standalone:master
+FROM ghcr.io/joinmarket-webui/joinmarket-webui-dev-standalone:dev-with-local-tor
 
-COPY default.cfg "${DEFAULT_CONFIG}"
+COPY default.cfg ${DEFAULT_CONFIG}
 
 ENTRYPOINT  [ "tini", "-g", "--", "/jam-entrypoint.sh" ]
