wip: remove defining onion_serving_host and onion_serving_port

--- a/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/Dockerfile
+++ b/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/joinmarket-webui/joinmarket-webui-dev-standalone:dev-with-local-tor
+FROM ghcr.io/joinmarket-webui/joinmarket-webui-dev-standalone:master
 
 COPY default.cfg ${DEFAULT_CONFIG}
 
