--- a/docker/regtest/dockerfile-deps/joinmarket/latest/Dockerfile
+++ b/docker/regtest/dockerfile-deps/joinmarket/latest/Dockerfile
@@ -4,6 +4,7 @@ RUN apt-get update \
     && apt-get install -qq --no-install-recommends tini procps vim git iproute2 supervisor \
        curl build-essential automake pkg-config libtool python3-dev python3-pip python3-setuptools libltdl-dev \
        libevent-dev libssl-dev zlib1g-dev \
+       tor \
     && rm -rf /var/lib/apt/lists/*
 
 ENV REPO https://github.com/JoinMarket-Org/joinmarket-clientserver
@@ -13,7 +14,7 @@ ENV REPO_REF master
 WORKDIR /src
 RUN git clone "$REPO" . --depth=10 --branch "$REPO_BRANCH" && git checkout "$REPO_REF"
 
-RUN ./install.sh --docker-install --with-local-tor --disable-secp-check --without-qt
+RUN ./install.sh --docker-install --disable-secp-check --without-qt
 
 ENV DATADIR /root/.joinmarket
 ENV CONFIG ${DATADIR}/joinmarket.cfg
@@ -24,6 +25,7 @@ ENV PATH /src/scripts:$PATH
 
 WORKDIR /src/scripts
 
+COPY torrc /etc/tor/torrc
 COPY autostart ${DEFAULT_AUTO_START}
 COPY default.cfg ${DEFAULT_CONFIG}
 COPY supervisor-conf/*.conf /etc/supervisor/conf.d/
