--- a/docker/regtest/dockerfile-deps/joinmarket/latest/default.cfg
+++ b/docker/regtest/dockerfile-deps/joinmarket/latest/default.cfg
@@ -88,15 +88,15 @@ directory_nodes = this_string_will_be_replaced_automatically_before_startup
 # running multiple bots at once. Don't alter it otherwise
 regtest_count = 0,0
 
-#[MESSAGING:server1]
-#host = irc
-#hostid = localhost1
-#channel = joinmarket-pit
-#port = 6667
-#usessl = false
-#socks5 = false
-#socks5_host = localhost
-#socks5_port = 9050
+[MESSAGING:server1]
+host = irc
+hostid = localhost1
+channel = joinmarket-pit
+port = 6667
+usessl = false
+socks5 = false
+socks5_host = localhost
+socks5_port = 9050
 
 [LOGGING]
 # Set the log level for the output to the terminal/console
