--- a/docker/regtest/dockerfile-deps/joinmarket/directory_node/Dockerfile
+++ b/docker/regtest/dockerfile-deps/joinmarket/directory_node/Dockerfile
@@ -5,7 +5,8 @@ RUN apt-get update \
        # joinmarket dependencies
        curl build-essential automake pkg-config libtool python3-dev python3-pip python3-setuptools libltdl-dev \
        # tor dependencies
-       libevent-dev libssl-dev zlib1g-dev
+       libevent-dev libssl-dev zlib1g-dev \
+       && rm -rf /var/lib/apt/lists/*
 
 ENV REPO https://github.com/JoinMarket-Org/joinmarket-clientserver
 ENV REPO_BRANCH master
