--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "prettier": "^2.6.2",
     "qrcode": "^1.5.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.4.0",
+    "react-bootstrap": "^2.5.0-beta.1",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.16.9",
     "react-router-bootstrap": "^0.26.1",
