--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/node": "^17.0.35",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.0",
     "buffer": "^6.0.3",
     "classnames": "^2.3.1",
     "conventional-changelog": "^3.1.25",
@@ -31,14 +31,13 @@
     "jest-watch-typeahead": "^0.6.5",
     "jest-websocket-mock": "^2.3.0",
     "lint-staged": "^12.4.2",
-    "moving-letters": "^1.0.1",
     "prettier": "^2.6.2",
     "qrcode": "^1.5.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.4.0",
+    "react-bootstrap": "^2.5.0-beta.1",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.16.9",
-    "react-router-bootstrap": "^0.26.1",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.7.2",
