--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "homepage": ".",
   "devDependencies": {
+    "@emotion/react": "^11.9.3",
     "@popperjs/core": "^2.11.5",
+    "@table-library/react-table-library": "^4.0.10",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -41,11 +43,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.7.2",
-    "web-vitals": "^2.1.4",
-    "@emotion/react": "^11.9.3",
-    "@table-library/react-table-library": "^4.0.10",
-    "install": "^0.13.0",
-    "npm": "^8.15.0"
+    "web-vitals": "^2.1.4"
   },
   "dependencies": {
     "serve": "13.0.2"
@@ -101,6 +99,9 @@
       "Math",
       "localStorage"
     ],
-    "clearMocks": true
+    "clearMocks": true,
+    "transformIgnorePatterns": [
+      "node_modules/(?!@table-library)"
+    ]
   }
 }
