--- a/docker/regtest/dockerfile-deps/joinmarket/latest/Dockerfile
+++ b/docker/regtest/dockerfile-deps/joinmarket/latest/Dockerfile
@@ -2,8 +2,10 @@ FROM python:3.9.7-slim-bullseye
 
 RUN apt-get update \
     && apt-get install -qq --no-install-recommends tini procps vim git iproute2 supervisor \
+       # joinmarket dependencies
        curl build-essential automake pkg-config libtool python3-dev python3-pip python3-setuptools libltdl-dev \
-    && rm -rf /var/lib/apt/lists/*
+       tor \
+       && rm -rf /var/lib/apt/lists/*
 
 ENV REPO https://github.com/JoinMarket-Org/joinmarket-clientserver
 ENV REPO_BRANCH master
@@ -23,6 +25,7 @@ ENV PATH /src/scripts:$PATH
 
 WORKDIR /src/scripts
 
+COPY torrc /etc/tor/torrc
 COPY autostart ${DEFAULT_AUTO_START}
 COPY default.cfg ${DEFAULT_CONFIG}
 COPY supervisor-conf/*.conf /etc/supervisor/conf.d/
