dev: move regtest logs from root hom dir to /var/log/jam

--- a/docker/regtest/dockerfile-deps/joinmarket/latest/supervisor-conf/ob-watcher.conf
+++ b/docker/regtest/dockerfile-deps/joinmarket/latest/supervisor-conf/ob-watcher.conf
@@ -2,9 +2,9 @@
 directory=/src/scripts/obwatch
 command=python3 ob-watcher.py --host 0.0.0.0
 autostart=false
-stdout_logfile=/root/.joinmarket/logs/obwatch_stdout.log
-stdout_logfile_maxbytes=5MB
-stdout_logfile_backups=0
-stderr_logfile=/root/.joinmarket/logs/obwatch_stderr.log
-stderr_logfile_maxbytes=5MB
-stderr_logfile_backups=0
+stdout_logfile=/var/log/jam/obwatch_stdout.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=5
+stderr_logfile=/var/log/jam/obwatch_stderr.log
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups=5
