--- a/docker/regtest/dockerfile-deps/joinmarket/directory_node/supervisor-conf/directory-node.conf
+++ b/docker/regtest/dockerfile-deps/joinmarket/directory_node/supervisor-conf/directory-node.conf
@@ -2,9 +2,9 @@
 directory=/src/scripts
 command=python3 start-dn.py datadir=/root/.joinmarket
 autostart=false
-stdout_logfile=/root/.joinmarket/logs/directory_node_stdout.log
-stdout_logfile_maxbytes=5MB
-stdout_logfile_backups=0
-stderr_logfile=/root/.joinmarket/logs/directory_node_stderr.log
-stderr_logfile_maxbytes=5MB
-stderr_logfile_backups=0
+stdout_logfile=/var/log/jam/directory_node_stdout.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=5
+stderr_logfile=/var/log/jam/directory_node_stderr.log
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups=5
