--- a/docker/regtest/dockerfile-deps/joinmarket/latest/supervisor-conf/jmwalletd.conf
+++ b/docker/regtest/dockerfile-deps/joinmarket/latest/supervisor-conf/jmwalletd.conf
@@ -2,9 +2,9 @@
 directory=/src/scripts
 command=python3 jmwalletd.py
 autostart=false
-stdout_logfile=/root/.joinmarket/logs/jmwalletd_stdout.log
-stdout_logfile_maxbytes=5MB
-stdout_logfile_backups=0
-stderr_logfile=/root/.joinmarket/logs/jmwalletd_stderr.log
-stderr_logfile_maxbytes=5MB
-stderr_logfile_backups=0
+stdout_logfile=/var/log/jam/jmwalletd_stdout.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=5
+stderr_logfile=/var/log/jam/jmwalletd_stderr.log
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups=5
