poc: fetch jam log file

--- a/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/Dockerfile
+++ b/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/Dockerfile
@@ -1,4 +1,5 @@
-FROM ghcr.io/joinmarket-webui/joinmarket-webui-dev-standalone:master
+#FROM ghcr.io/joinmarket-webui/joinmarket-webui-dev-standalone:master
+FROM joinmarket-webui/jam-standalone-logs:latest
 
 COPY default.cfg ${DEFAULT_CONFIG}
 
