dev: revert to original secondary container image

--- a/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/Dockerfile
+++ b/docker/regtest/dockerfile-deps/joinmarket/webui-standalone/Dockerfile
@@ -1,5 +1,4 @@
-#FROM ghcr.io/joinmarket-webui/joinmarket-webui-dev-standalone:master
-FROM joinmarket-webui/jam-standalone-logs1:latest
+FROM ghcr.io/joinmarket-webui/joinmarket-webui-dev-standalone:master
 
 COPY default.cfg ${DEFAULT_CONFIG}
 
