--- a/docker/regtest/dockerfile-deps/bitcoin/regtest-initializer/Dockerfile
+++ b/docker/regtest/dockerfile-deps/bitcoin/regtest-initializer/Dockerfile
@@ -6,6 +6,9 @@ RUN apk add --no-cache --update curl jq
 COPY wait-for-bitcoind.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/wait-for-bitcoind.sh
 
+COPY wait-for-blocks.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/wait-for-blocks.sh
+
 COPY mine-blocks.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/mine-blocks.sh
 
