--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.7.2",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.7.2"
   },
   "dependencies": {
     "serve": "14.0.1"
