--- a/package.json
+++ b/package.json
@@ -11,34 +11,34 @@
   },
   "homepage": ".",
   "devDependencies": {
-    "@emotion/react": "^11.9.3",
-    "@popperjs/core": "^2.11.5",
-    "@table-library/react-table-library": "^4.0.10",
-    "@testing-library/jest-dom": "^5.16.4",
+    "@emotion/react": "^11.10.4",
+    "@popperjs/core": "^2.11.6",
+    "@table-library/react-table-library": "^4.0.18",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.1",
+    "@types/jest": "^29.0.3",
     "@types/node": "^17.0.35",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
-    "bootstrap": "^5.2.0",
+    "bootstrap": "^5.2.1",
     "buffer": "^6.0.3",
-    "classnames": "^2.3.1",
+    "classnames": "^2.3.2",
     "conventional-changelog": "^3.1.25",
     "formik": "^2.2.9",
     "http-proxy-middleware": "^2.0.6",
     "husky": "^8.0.1",
-    "i18next": "^21.8.4",
-    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next": "^21.9.2",
+    "i18next-browser-languagedetector": "^6.1.5",
     "jest-watch-typeahead": "^0.6.5",
-    "jest-websocket-mock": "^2.3.0",
-    "lint-staged": "^12.4.2",
-    "prettier": "^2.6.2",
-    "qrcode": "^1.5.0",
+    "jest-websocket-mock": "^2.4.0",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "qrcode": "^1.5.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.5.0-beta.1",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.16.9",
+    "react-i18next": "^11.18.6",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
@@ -46,7 +46,7 @@
     "web-vitals": "^2.1.4"
   },
   "dependencies": {
-    "serve": "13.0.2"
+    "serve": "14.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
