--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jam",
   "version": "0.1.0",
   "private": true,
-  "description": "A friendly UI for JoinMarket",
+  "description": "Your sats. Your privacy. Your profit.",
   "repository": "git@github.com:joinmarket-webui/joinmarket-webui.git",
   "license": "MIT",
   "engines": {
