--- a/docker/regtest/docker-compose.yml
+++ b/docker/regtest/docker-compose.yml
@@ -52,8 +52,8 @@ services:
       service: joinmarket_jam_standalone
     environment:
       jm_rpc_wallet_file: jm_tertiary
-      jm_rpc_user: joinmarket2
-      jm_rpc_password: joinmarket2
+      jm_rpc_user: joinmarket3
+      jm_rpc_password: joinmarket3
     ports:
       - "30080:80"
       - "30183:28183" # exposed for "init setup" routine
@@ -122,6 +122,8 @@ services:
         rpcauth=joinmarket:260b4c5b1fbd09d75a4aabf90226282f$$76e170af088d43a588992cdd5e7bae2242b03c33aa672cccfd1fb75f9281299e
         # rpcauth (user=joinmarket2; password=joinmarket2)
         rpcauth=joinmarket2:521bf9f4468529d49c0a41f9c9f8fdbf$$63ae94a73d2aa45e7ee756945d9b1e469f9873ce026b815d676a748f777e0b8d
+        # rpcauth (user=joinmarket3; password=joinmarket3)
+        rpcauth=joinmarket3:85d4beaa74540c3b08f4fef50d74a59e$$3033c779ea4bfd02a1f3403bc4d012f3e6d19b355f74c5e8de1d3439979d5e4b
     expose:
       - 43782 # RPC
       - 39388 # P2P
